Corrected twitter username/

--- a/src/index.jade
+++ b/src/index.jade
@@ -21,7 +21,7 @@ html
         span.tiny-subheader Modern web app technology
         img.avatar.avatar--small(src='images/profile.jpg')
         h3.avatar-name
-          a(href='https://twitter.com/markdalgleish') Chris Dolphin   @likethemammal
+          a(href='https://twitter.com/likethemammal') Chris Dolphin   @likethemammal
 
         a.floating-link(href="http://goo.gl/7SQD6V") Slides: http://goo.gl/7SQD6V
 
@@ -314,7 +314,7 @@ html
         br
         img.avatar.avatar--small(src='images/profile.jpg')
         h3.avatar-name
-          a(href='https://twitter.com/markdalgleish') @likethemammal
+          a(href='https://twitter.com/likethemamml') @likethemammal
           br
           a(href='https://likethemammal.com')   likethemammal.com
 
